# django-tenant-options

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  bandit.yml  docker-compose.yml  noxfile.py  pyproject.toml  pyrightconfig.json  requirements.txt  settings.py
.github/workflows/: constraints.txt  release.yml  tests.yml
compose/django/: Dockerfile  start
docs/: commands.md  concepts.md  conf.py  configuration.md  customization.md  exampleproject.md  forms.md  index.md  models.md  optionscookbook.md  quickstart.md  reference.md  requirements.txt  terminology.md  tutorial.md  usage.md  usecases.md  views-and-templates.md
example_project/: conftest.py  settings.py  test_app_settings.py  test_checks.py  test_commands.py  test_django_option_lists.py  test_forms.py  test_managers.py  test_metaclass_guards.py  test_models.py  test_system_checks.py  test_validate_command.py
example_project/example/: admin.py  forms.py  models.py  tests.py  urls.py  vews.py  views.py
example_project/example/fixtures/: testdata.json
example_project/example/migrations/: 0001_initial.py  0002_initial.py  0003_auto_trigger_taskpriorityselection.py  0004_auto_trigger_taskstatusselection.py
example_project/example/templates/example/: base.html  form.html  home.html  task_list.html  task_priority_list.html  task_status_list.html  task_status_selection_list.html  tenant_list.html
example_project/users/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  tests.py  views.py
example_project/users/migrations/: 0001_initial.py  __init__.py
src/django_tenant_options/: __init__.py  admin.py  app_settings.py  apps.py  checks.py  choices.py  exceptions.py  form_fields.py  forms.py  helpers.py  models.py  tests.py  urls.py  views.py
src/django_tenant_options/management/: __init__.py
src/django_tenant_options/management/commands/: __init__.py  listoptions.py  maketriggers.py  removetriggers.py  syncoptions.py  validateoptions.py
tests/: __init__.py  settings.py
